Added Mistake Counter for Each Typing Session

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
     <div class="textContainer">
       <div class="requiredText">
-        <p>Type this into the textbox</p> 
+        <p>Hello this is Ivan from the place called the place where one goes to die by the fire</p> 
       </div> 
 
       <div class="textbox"> 
